# freeflow

./: .gitignore  CHANGELOG.md  CLAUDE.md  Info.plist  Makefile  Package.resolved  Package.swift  README.md  justfile  release-please-config.json
.beads/: metadata.json
.claude/skills/release/: SKILL.md
.githooks/: commit-msg
.github/workflows/: build.yml  lint-workflows.yml  pr-title.yml  release.yml
CLI/: FreeFlowCLI.swift  WrenflowCLI.swift
FFIModule/: wrenflow_ffiFFI.h
Sources/: AppContextService.swift  AppDelegate.swift  AppState.swift  AudioRecorder.swift  CLIInstaller.swift  ErrorToastView.swift  GroqModelsService.swift  LocalTranscriptionService.swift  MenuBarView.swift  ModelDownloadView.swift  PermissionGateView.swift  PermissionStateObservable.swift  PipelineHistoryItem.swift  PipelineHistoryStore.swift  PostProcessingService.swift  RustPipelineBridge.swift  SettingsView.swift  SetupAccordionView.swift  SetupView.swift  UpdateManager.swift  WrenflowStyle.swift
Tests/: UpdateVersionTests.swift
android/: settings.gradle.kts
android/app/: build.gradle.kts
core/: Cargo.toml
core/.cargo/: config.toml
core/wrenflow-core/: Cargo.toml
core/wrenflow-core/src/: audio.rs  audio_capture.rs  config.rs  history.rs  history_store.rs  http_client.rs  lib.rs  model_downloader.rs  models.rs  opus_encoder.rs  pipeline.rs  platform.rs  post_processing.rs  transcription.rs  transcription_local.rs
core/wrenflow-ffi/: Cargo.toml
core/wrenflow-ui/: Cargo.toml  build.rs  input.css  package.json
core/wrenflow-ui/assets/: icon_256.b64  tailwind.css
core/wrenflow-ui/src/: components.rs  main.rs  platform_cards.rs  prompts.rs  run_log.rs  settings.rs  setup.rs  theme.rs
flutter/: justfile  pubspec.yaml
flutter/lib/: main.dart
flutter/macos/: project.yml
ios/Wrenflow/: AppState.swift  AudioCapture.swift  ContentView.swift  Info.plist  WrenflowApp.swift
macos/: project.yml
scripts/: generate-flutter-icons.sh
ui/: app.json  package.json
ui/app/: _layout.tsx  index.tsx
windows/: Cargo.toml
windows/src/: audio.rs  hotkey.rs  main.rs  text_insert.rs  tray.rs
(+45 files in other folders)
