[package]
name = "wrenflow-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wrenflow-core = { path = "../wrenflow-core" }
dioxus = { version = "0.6", features = ["desktop"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger = "0.11"
chrono = "0.4"
